RESOLVED FIXED28341
REGRESSION (r47292): Prototype.js is broken by ES5 Arguments changes
https://bugs.webkit.org/show_bug.cgi?id=28341
Summary REGRESSION (r47292): Prototype.js is broken by ES5 Arguments changes
mitz
Reported 2009-08-15 13:04:02 PDT
After logging in to MobileMe at www.me.com, it fails to load mail and remains stuck showing “Loading Mail…”. Contacts and Calendars behave similarly. The console shows the following: TypeError: Result of expression 'SC.View.extend({click:function(){return true}}).outletFor' [undefined] is not a function. TypeError: Result of expression 'Mac.PanelView' [undefined] is not an object. TypeError: Result of expression 'SC.Page' [undefined] is not an object. TypeError: Result of expression 'SC.Application' [undefined] is not an object.
Attachments
mitz
Comment 1 2009-08-15 13:04:26 PDT
Mark Rowe (bdash)
Comment 2 2009-08-15 15:45:34 PDT
Oliver Hunt
Comment 3 2009-08-17 18:02:00 PDT
Committed r47404
Note You need to log in before you can comment on or make changes to this bug.