REGRESSION (r47292): Prototype.js is broken by ES5 Arguments changes https://bugs.webkit.org/show_bug.cgi?id=28341 <rdar://problem/7145615>

RS=Mark Rowe

Reverting r47292.  Alas Prototype.js breaks with Arguments inheriting
from Array as ES5 attempted.  Prototype.js defines $A in terms of a
function it places on (among other global objects) the Array prototype,
thus breaking $A for arrays.

Canonical link: https://commits.webkit.org/39001@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47404 268f45cc-cd09-0410-ab3c-d52691b4dbfc