JavaScriptCore/runtime/Arguments.h
@@ -100,7 +100,6 @@ namespace JSC {
         virtual const ClassInfo* classInfo() const { return &info; }
 
         void init(CallFrame*);
-        void initializeStandardProperties(CallFrame*);
 
         OwnPtr<ArgumentsData> d;
     };
@@ -134,7 +133,6 @@ namespace JSC {
         : JSObject(callFrame->lexicalGlobalObject()->argumentsStructure())
         , d(new ArgumentsData)
     {
-        initializeStandardProperties(callFrame);
         JSFunction* callee;
         ptrdiff_t firstParameterIndex;
         Register* argv;
@@ -173,8 +171,7 @@ namespace JSC {
         , d(new ArgumentsData)
     {
         ASSERT(!callFrame->callee()->body()->parameterCount());
-        
-        initializeStandardProperties(callFrame);
+
         unsigned numArguments = callFrame->argumentCount() - 1;
 
         d->numParameters = 0;
@@ -242,13 +239,6 @@ namespace JSC {
         return asArguments(jsValue());
     }
     
-    
-    inline void Arguments::initializeStandardProperties(CallFrame* callFrame)
-    {
-        putDirectFunction(callFrame->propertyNames().constructor, callFrame->lexicalGlobalObject()->objectConstructor(), DontEnum);
-        putDirectFunction(callFrame->propertyNames().toString, callFrame->lexicalGlobalObject()->objectToStringFunction(), DontEnum);
-        putDirectFunction(callFrame->propertyNames().toLocaleString, callFrame->lexicalGlobalObject()->objectToLocaleStringFunction(), DontEnum);
-    }
 
 } // namespace JSC
 
