JavaScriptCore/runtime/JSGlobalObject.h
@@ -38,10 +38,10 @@ namespace JSC {
     class Debugger;
     class ErrorConstructor;
     class FunctionPrototype;
+    class GlobalCodeBlock;
     class GlobalEvalFunction;
     class NativeErrorConstructor;
-    class GlobalCodeBlock;
-    class ObjectConstructor;
+    class ProgramCodeBlock;
     class PrototypeFunction;
     class RegExpConstructor;
     class RegExpPrototype;
@@ -61,7 +61,6 @@ namespace JSC {
                 : JSVariableObjectData(&symbolTable, 0)
                 , registerArraySize(0)
                 , globalScopeChain(NoScopeChain())
-                , objectConstructor(0)
                 , regExpConstructor(0)
                 , errorConstructor(0)
                 , evalErrorConstructor(0)
@@ -73,8 +72,6 @@ namespace JSC {
                 , evalFunction(0)
                 , callFunction(0)
                 , applyFunction(0)
-                , objectToStringFunction(0)
-                , objectToLocaleStringFunction(0)
                 , objectPrototype(0)
                 , functionPrototype(0)
                 , arrayPrototype(0)
@@ -103,7 +100,6 @@ namespace JSC {
 
             int recursion;
 
-            ObjectConstructor* objectConstructor;
             RegExpConstructor* regExpConstructor;
             ErrorConstructor* errorConstructor;
             NativeErrorConstructor* evalErrorConstructor;
@@ -116,8 +112,6 @@ namespace JSC {
             GlobalEvalFunction* evalFunction;
             NativeFunctionWrapper* callFunction;
             NativeFunctionWrapper* applyFunction;
-            NativeFunctionWrapper* objectToStringFunction;
-            NativeFunctionWrapper* objectToLocaleStringFunction;
 
             ObjectPrototype* objectPrototype;
             FunctionPrototype* functionPrototype;
@@ -190,7 +184,6 @@ namespace JSC {
         // The following accessors return pristine values, even if a script 
         // replaces the global object's associated property.
 
-        ObjectConstructor* objectConstructor() const { return d()->objectConstructor; }
         RegExpConstructor* regExpConstructor() const { return d()->regExpConstructor; }
 
         ErrorConstructor* errorConstructor() const { return d()->errorConstructor; }
@@ -211,9 +204,6 @@ namespace JSC {
         NumberPrototype* numberPrototype() const { return d()->numberPrototype; }
         DatePrototype* datePrototype() const { return d()->datePrototype; }
         RegExpPrototype* regExpPrototype() const { return d()->regExpPrototype; }
-
-        NativeFunctionWrapper* objectToStringFunction() const { return d()->objectToStringFunction; }
-        NativeFunctionWrapper* objectToLocaleStringFunction() const { return d()->objectToLocaleStringFunction; }
 
         JSObject* methodCallDummy() const { return d()->methodCallDummy; }
 
